# SWKS

./: .gitignore  EchoService.c  Multiplexing in C-select().odp  Multiplexing in C-select().pptx  NetCommands  README.md  Server.sln  links  main.c  makefile  server.c  server.h
Linux/: CMakeLists.txt  LinuxEchoService.c  LinuxEchoService.h  client  client.c  client.h  echoService.c  echoService.h  linuxsocket.c  linuxsocket.h  main  main.c  mainT.cpp  makefile  pipeService.c  pipeService.h  registry.c  registry.cpp  registry.h  registry.hpp  registryT.cpp  registryT.hpp  server  serverT  services.c  services.h  soundService.c  soundService.h  test.c  test.txt
Linux/include/: registry.h
Linux/services/include/: echoService.h  pipeService.h  soundService.h
Linux/services/src/: echoService.c  pipeService.c  soundService.c
Linux/src/: registry.c  registry.cpp
Server/: Server.c  Server.h  Server.vcxproj  Server.vcxproj.filters  Sockets.c  Sockets.h  TcpServer.c  main.c
Windows/: winsocket.c  winsocket.h
